[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nmaping"
version = "0.1.0"
authors = [
    { name="Abu Tanim", email="mrtanvai@gmail.com" },
]
description = "An automation and network scanning utility tool."
readme = "README.md"
requires-python = ">=3.7"
license = { text = "Custom License" } # <-- এখানে আপনার লাইসেন্সের নাম দিতে পারেন

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    # এখান থেকে OSI Approved লাইনের ঝামেলাটা পুরোপুরি তুলে দেওয়া হয়েছে
]

[tool.setuptools.packages.find]
where = ["."]
include = ["nmap.py"]
